force-app/main/default/objects/Contract/fields/AccountingDepartmentMemo__c.field-meta.xml
<CustomField>
    <fullName>AccountingDepartmentMemo__c</fullName>
    <inlineHelpText>最大131,072文字入力できます</inlineHelpText>
    <label>経理メモ</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>