force-app/main/default/objects/Contract/fields/AddressBilling__c.field-meta.xml
<CustomField>
    <fullName>AddressBilling__c</fullName>
    <formula>PrimarilyBliingContact__r.Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>住所(請求先)</label>
    <type>Text</type>
</CustomField>