force-app/main/default/objects/Contract/fields/BillingDeliveryMethod__c.field-meta.xml
<CustomField>
    <fullName>BillingDeliveryMethod__c</fullName>
    <label>【削除予定】請求発送手段</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>郵送発送（請求書）</fullName>
            </value>
            <value>
                <fullName>メール発送（請求書）</fullName>
                <default>true</default>
                <label>メール発送（請求書）</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>