force-app/main/default/objects/Contract/fields/BillingEmail__c.field-meta.xml
<CustomField>
    <fullName>BillingEmail__c</fullName>
    <formula>PrimarilyBliingContact__r.MailAddless__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>請求メールTO</label>
    <type>Text</type>
</CustomField>