force-app/main/default/objects/Contract/fields/BillingEmail_CC__c.field-meta.xml
<CustomField>
    <fullName>BillingEmail_CC__c</fullName>
    <label>請求メールCC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>