force-app/main/default/objects/Contract/fields/BillingPaymentType__c.field-meta.xml
<CustomField>
    <fullName>BillingPaymentType__c</fullName>
    <label>【削除予定】請求・支払い条件</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>月額請求</fullName>
            </value>
            <value>
                <fullName>一括請求</fullName>
            </value>
            <value>
                <fullName>イレギュラー</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>