force-app/main/default/objects/Contract/fields/BillToAccount__c.field-meta.xml
<CustomField>
    <fullName>BillToAccount__c</fullName>
    <formula>PrimarilyBliingContact__r.AccountName__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>請求先企業</label>
    <type>Text</type>
</CustomField>