force-app/main/default/objects/Contract/fields/CancellationExpectedDate__c.field-meta.xml
<CustomField>
    <fullName>CancellationExpectedDate__c</fullName>
    <label>解約予定日</label>
    <type>Date</type>
</CustomField>