force-app/main/default/objects/Contract/fields/CancellationNotificationDate__c.field-meta.xml
<CustomField>
    <fullName>CancellationNotificationDate__c</fullName>
    <label>解約通知日</label>
    <type>Date</type>
</CustomField>