force-app/main/default/objects/Contract/fields/ChurnReason__c.field-meta.xml
<CustomField>
    <fullName>ChurnReason__c</fullName>
    <label>解約理由</label>
    <length>255</length>
    <type>Text</type>
</CustomField>