force-app/main/default/objects/Contract/fields/ID18__c.field-meta.xml
<CustomField>
    <fullName>ID18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>契約ID18桁</label>
    <type>Text</type>
</CustomField>