force-app/main/default/objects/Contract/fields/IrregularPaymentTerms__c.field-meta.xml
<CustomField>
    <fullName>IrregularPaymentTerms__c</fullName>
    <label>イレギュラーサイト</label>
    <length>255</length>
    <type>Text</type>
</CustomField>