force-app/main/default/objects/Contract/fields/MainBillingRepFullName__c.field-meta.xml
<CustomField>
    <fullName>MainBillingRepFullName__c</fullName>
    <formula>PrimarilyBliingContact__r.Name__c</formula>
    <label>主請求先担当氏名</label>
    <type>Text</type>
</CustomField>