force-app/main/default/objects/Contract/fields/OppType__c.field-meta.xml
<CustomField>
    <fullName>OppType__c</fullName>
    <label>種別</label>
    <length>100</length>
    <type>Text</type>
</CustomField>