force-app/main/default/objects/Contract/fields/OrganizationA_ContractId__c.field-meta.xml
<CustomField>
    <fullName>OrganizationA_ContractId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>【外部】組織A契約ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>