force-app/main/default/objects/Contract/fields/OriginalOpportunity__c.field-meta.xml
<CustomField>
    <fullName>OriginalOpportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>直近の受注商談</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>契約</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>