force-app/main/default/objects/Contract/fields/PaymentTerms__c.field-meta.xml
<CustomField>
    <fullName>PaymentTerms__c</fullName>
    <label>支払いサイト</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PaymentSite</valueSetName>
    </valueSet>
</CustomField>