force-app/main/default/objects/Contract/fields/PrimarilyBliingContact__c.field-meta.xml
<CustomField>
    <fullName>PrimarilyBliingContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>主請求先担当ID</label>
    <referenceTo>BillingContact__c</referenceTo>
    <relationshipLabel>契約</relationshipLabel>
    <relationshipName>BillingContacts</relationshipName>
    <type>Lookup</type>
</CustomField>