force-app/main/default/objects/Contract/fields/RakurakuMeisaiItemCustomerCode__c.field-meta.xml
<CustomField>
    <fullName>RakurakuMeisaiItemCustomerCode__c</fullName>
    <label>楽楽明細顧客コード</label>
    <length>255</length>
    <type>Text</type>
</CustomField>