force-app/main/default/objects/Contract/fields/RemainingMonths__c.field-meta.xml
<CustomField>
    <fullName>RemainingMonths__c</fullName>
    <formula>if(FLOOR((EndDate - TODAY())/30)&gt;0,FLOOR((EndDate - TODAY())/30),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>【利用不可】残月数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>