force-app/main/default/objects/Contract/fields/TaxRate__c.field-meta.xml
<CustomField>
    <fullName>TaxRate__c</fullName>
    <formula>IF(
ExemptionTarget__c,
0,
0.1
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>消費税率</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>