force-app/main/default/objects/Contract/fields/UsageStartDate__c.field-meta.xml
<CustomField>
    <fullName>UsageStartDate__c</fullName>
    <inlineHelpText>初回利用開始日</inlineHelpText>
    <label>初回利用開始日</label>
    <type>Date</type>
</CustomField>