force-app/main/default/objects/Contract/fields/VirtualAccountBankBranchOfficeName__c.field-meta.xml
<CustomField>
    <fullName>VirtualAccountBankBranchOfficeName__c</fullName>
    <label>バーチャル口座銀行・支店名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>