force-app/main/default/objects/Contract/fields/VirtualAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>VirtualAccountNumber__c</fullName>
    <label>バーチャル口座番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>