force-app/main/default/objects/Contract/recordTypes/BusinessDevelopmentRecordType.recordType-meta.xml
<RecordType>
    <fullName>BusinessDevelopmentRecordType</fullName>
    <active>true</active>
    <label>事業開発</label>
</RecordType>